--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Testing NPM",
   "main": "index.html",
   "scripts": {
-    "start": "npm run lite",
+    "start": "npm run watch:all",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
-    "scss": "node-sass -o CSS/ CSS/"
+    "scss": "node-sass -o CSS/ CSS/",
+    "watch:scss": "onchange \"CSS/*.scss\" -- npm run scss",
+    "watch:all": "parallelshell \"npm run watch:scss\""
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,9 @@
   "homepage": "https://github.com/pranjal36/Git-Node-Test#readme",
   "devDependencies": {
     "lite-server": "^2.5.4",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "onchange": "^7.0.2",
+    "parallelshell": "^3.0.2"
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
