--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lite": "lite-server",
     "scss": "node-sass -o CSS/ CSS/",
     "watch:scss": "onchange \"CSS/*.scss\" -- npm run scss",
-    "watch:all": "parallelshell \"npm run watch:scss\""
+    "watch:all": "parallelshell \"npm run watch:scss\"",
+    "clean": "rimraf dist",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "imagemin": "imagemin img/* --out-dir='dist/img'",
+    "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
+    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
   },
   "repository": {
     "type": "git",
@@ -22,10 +27,15 @@
   },
   "homepage": "https://github.com/pranjal36/Git-Node-Test#readme",
   "devDependencies": {
+    "cssmin": "^0.4.3",
+    "htmlmin": "0.0.7",
     "lite-server": "^2.5.4",
     "node-sass": "^4.14.1",
     "onchange": "^7.0.2",
-    "parallelshell": "^3.0.2"
+    "parallelshell": "^3.0.2",
+    "rimraf": "^3.0.2",
+    "uglifyjs": "^2.4.11",
+    "usemin-cli": "^0.5.1"
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
