--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/pranjal36/Git-Node-Test#readme",
   "devDependencies": {
+    "browser-sync": "^2.26.12",
     "cssmin": "^0.4.3",
     "grunt": "^1.3.0",
     "grunt-browser-sync": "^2.2.0",
@@ -41,6 +42,8 @@
     "grunt-filerev": "^2.3.1",
     "grunt-sass": "^3.1.0",
     "grunt-usemin": "^3.1.1",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.1.0",
     "htmlmin": "0.0.7",
     "jit-grunt": "^0.10.0",
     "lite-server": "^2.5.4",
